--- a/src/globalcss/main-block.css
+++ b/src/globalcss/main-block.css
@@ -1,4 +1,4 @@
 .main-block {
-    background-image: url('background.png');
-    background-size: auto;
+    background-image: url('background.jpeg');
+    background-size: cover;
 }
